# bugred-and-unit

Тестовое Задание (решение)/Task 1/bugred_testing/: README.md  pyproject.toml
Тестовое Задание (решение)/Task 1/bugred_testing/tests/: test_user_create_delete.py
Тестовое Задание (решение)/Task 1/bugred_testing/tests/Framework/: AddUserForm.py  BugredHome.py  LogInForm.py  NavBar.py  SearchUserForm.py  UserProfile.py  UsersHome.py  UsersList.py  UsersPanel.py
Тестовое Задание (решение)/Task 1/bugred_testing/tests/Framework/Utils/: Browser.py  Config.py
Тестовое Задание (решение)/Task 1/bugred_testing/tests/config/: credentials.json  options.json  urls.json
Тестовое Задание (решение)/Task 2/: unit_tests.py
