[tool.poetry]
name = "bugred-testing"
version = "0.1.0"
description = ""
authors = ["Yaroslav Shkurat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
selenium = "^4.27.1"
pytest-order = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
